# Rover2024

./: .gitignore  .gitmodules  README.md  build_robot_container.sh  start_robot.sh
.devcontainer/: Dockerfile  devcontainer.json
config/: arm_config.yaml  arm_controller_config.yaml  drivetrain_config.yaml  whacker_controller_config.yaml
launch/: launch_robot.py
robot_docker/: Dockerfile
src/arm_interface/: package.xml  setup.py
src/arm_interface/arm_interface/: arm_interface.py  arm_spacenav_control.py  whacker_control.py
src/arm_interface/launch/: arm_controller_launch.py  arm_only_launch.py
src/libjaguar_drivetrain/: CMakeLists.txt  package.xml
src/libjaguar_drivetrain/launch/: drivetrain_launch.py
src/libjaguar_drivetrain/libjaguar/: CMakeLists.txt
src/libjaguar_drivetrain/libjaguar/include/: libjaguar.h
src/libjaguar_drivetrain/src/: jaguar_twist_drivetrain.cpp
src/robot_desc/: rover.urdf
src/rover_interfaces/: CMakeLists.txt  package.xml
src/rover_interfaces/msg/: ArmPosition.msg
